--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "activity1",
+            "request": "launch",
+            "mainClass": "lesson20.activity1",
+            "projectName": "Java_3df404fa"
+        },
+        {
+            "type": "java",
             "name": "FindElementIndex",
             "request": "launch",
             "mainClass": "lesson19.FindElementIndex",
