--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Game",
+            "request": "launch",
+            "mainClass": "lesson15.Game",
+            "projectName": "Java_3df404fa"
+        },
+        {
+            "type": "java",
             "name": "Digits",
             "request": "launch",
             "mainClass": "lesson13.Digits",
